src/pages/index.module.css
.container {
  width: 800px;
  /* margin: 0, auto; */
  padding: 20px;
  /* margin: 20px; */
  align-self: center;
  font-family: Poppins, sans-serif;
  text-align: center;
}

.container h1 {
  font-family: Orbitron, Poppins, sans-serif;
  font-size: 3rem;
  /* color: #393a3d; */
}
.container h2 {
  font-family: Poppins, sans-serif;
  font-size: 2rem;
  color: black;
}
.container h3 {
  font-family: Poppins, sans-serif;
  font-size: 1.1rem;
  color: #d5d5d5;
  font-weight: normal;
}
.container h4 {
  font-family: Poppins, sans-serif;
  font-size: 1.4rem;
  color: #2a7fff;
  font-weight: normal;
}
.container h5 {
  font-family: Poppins, sans-serif;
  font-size: 1.2rem;
  color: #393a3d;
  font-weight: normal;
}

.container p {
  font-size: 1.2rem;
  color: #393a3d;
  /* text-align: left; */
}

.featureContainer {
  width: 100%;
  margin: 0, auto;
  padding: 20px;
  /* margin: 20px; */
  /* background: pink; */
  font-family: Poppins, sans-serif;
  text-align: center;
  display: flex;
  flex-wrap: wrap;
  justify-content: center;
}

.featureCard {
  height: 250px;
  width: 250px;
  background: #eff2f6;
  padding: 20px;
  margin: 15px;
  border-radius: 10px;
  font-size: 0.5rem;
  /* color: #2a7fff; */
}

.featureCard .title {
  font-size: 1rem;
  line-height: 2rem;
  font-weight: bold;
  /* height: 50px; */
}

.featureCard .description {
  font-size: 0.9rem;
  line-height: 1.3rem;
  margin-top: 10px;
  text-align: left;
}

@media screen and (max-width: 996px) {
  .container {
    width: 375px;
    /* margin: 0, auto;
    padding: 20px;
    margin: 20px;
    align-self: center;
    font-family: Poppins, sans-serif;
    text-align: center; */
  }
}

[data-theme="dark"] .featureCard {
  color: #fff;
  background: #23262a;
}

[data-theme="dark"] .container p {
  color: #fff;
}

[data-theme="dark"] .container h2 {
  color: #fff;
}

.container .blue {
  background-color: #2a7fff;
  color: white;
  margin: 10px;
}

.container .gray {
  background-color: #efefef;
  color: #393a3d;
  margin: 10px;
}
.container .yellow {
  background-color: #f8dc4e;
  color: #393a3d;
  margin: 10px;
}

.cta {
  display: flex;
  justify-content: center;
  /* width: 350px; */
  /* background: pink; */
  margin: 0, auto;
  padding: 20px;
}

.featureSvg {
  height: 250px;
  width: 250px;
  padding: 40px;
  border-radius: 10px;
  color: #2a7fff;
}

@media screen and (max-width: 996px) {
  .container h1 {
    width: auto;
    font-size: 2rem;
  }

  .featureCard {
    height: 250px;
    width: auto;
    background: #eff2f6;
    padding: 20px;
    margin: 15px;
    border-radius: 10px;
    font-size: 0.5rem;
    /* color: #2a7fff; */
  }
}

